# mantis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  example.md  install.ps1  install.sh  justfile  mantis.toml  release-info.toml  tv.toml
.agent/: README.md
.agent/skills/pr-flow/: SKILL.md
.agent/skills/pr-review/: SKILL.md
.agent/skills/split-tests/: SKILL.md
.claude/: settings.json
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: app-bugreport.yml  bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  bench.yml  bump.yml  ci.yml  coverage.yml  main.yml  pages.yml  release.yml  tests.yml
Formula/: mantis.rb
benches/: performance.rs
completions/: _mantis  mantis.bash  mantis.fish  mantis.powershell  mantis.zsh
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  development.md  e2e-testing.md  git.md  installation.md  introduction.md  plugin-capability-matrix.md  plugin-development.md  plugin-registry.md  plugins.md  quickstart.md  releases.md  roadmap.md  telemetry.md  themes.md  usage.md  why.md
docs/superpowers/specs/: 2026-07-06-language-fold-plugins-design.md
e2e/checklists/: alacritty.md  ghostty.md  iterm2.md  windows_terminal_powershell.md  windows_terminal_wsl.md
e2e/data/: bom_utf8_sample.txt  crlf_sample.txt  json_sample.json  long_lines.txt  markdown_sample.md  python_sample.py  rust_sample.rs  yaml_sample.yml
man/: mantis.1
plugins/: git-diff.sh  git-log.sh  git-plugin.sh  iconize.sh
plugins/dockerfile/syntaxes/: dockerfile.sublime-syntax
plugins/go/: Cargo.toml
plugins/go/src/: main.rs  main_test.rs
plugins/iconize/: Cargo.toml
plugins/json/: Cargo.toml
plugins/json/src/: main.rs  main_test.rs
plugins/mantis-plugin-git-diff/: Cargo.toml
plugins/mantis-plugin-git-diff/src/: main.rs
plugins/mantis-plugin-git-log/: Cargo.toml
plugins/mantis-plugin-git-log/src/: main.rs
plugins/mantis-plugin-git-plugin/: Cargo.toml
plugins/mantis-plugin-git-plugin/src/: main.rs  main_test.rs
plugins/mantis-plugin-iconize/: Cargo.toml
plugins/mantis-plugin-iconize/src/: main.rs
plugins/mantis-plugin-markdown/: Cargo.toml
plugins/mantis-plugin-markdown/src/: main.rs  main_test.rs
plugins/markdown/: Cargo.toml
plugins/markdown/src/: main.rs  main_test.rs
plugins/python/: Cargo.toml
plugins/python/src/: main.rs  main_test.rs
plugins/rust/: Cargo.toml
plugins/rust/src/: main.rs  main_test.rs
plugins/sh/: Cargo.toml
plugins/sh/src/: main.rs  main_test.rs
plugins/terraform/syntaxes/: terraform.sublime-syntax
plugins/toml/syntaxes/: toml.sublime-syntax
plugins/tv-plugin-git/: Cargo.toml
plugins/tv-plugin-git-diff/: Cargo.toml
plugins/tv-plugin-git-diff/src/: main.rs  main_test.rs
plugins/tv-plugin-git-log/: Cargo.toml
plugins/tv-plugin-git-log/src/: main.rs  main_test.rs
plugins/tv-plugin-git-plugin/: Cargo.toml
plugins/tv-plugin-git-plugin/src/: main.rs  main_test.rs
plugins/tv-plugin-git/src/: main.rs  main_test.rs
plugins/tv-plugin-iconize/: Cargo.toml
plugins/tv-plugin-iconize/src/: main.rs  main_test.rs
plugins/tv-plugin-markdown/: Cargo.toml
plugins/tv-plugin-markdown/src/: main.rs
plugins/typescript/syntaxes/: typescript.sublime-syntax
plugins/yaml/: Cargo.toml
plugins/yaml/src/: main.rs  main_test.rs
scripts/: bench-report.sh  bench-summary.sh  ci-e2e.py  related-tests.sh  require-tests.sh  resolve-threads.sh
src/: actions.rs  actions_test.rs  ansi.rs  ansi_test.rs  app.rs  command_palette.rs  command_palette_test.rs  command_usage.rs  command_usage_test.rs  config.rs  diagnostics.rs  diagnostics_test.rs  diff.rs  diff_test.rs  event_source.rs  event_source_test.rs  file.rs  file_test.rs  fold.rs  fold_detectors.rs  fold_detectors_test.rs  fold_test.rs  git.rs  git_test.rs  highlight.rs  highlight_test.rs  language_provider.rs  language_provider_test.rs  lib.rs  list_picker.rs  list_picker_test.rs  main.rs  main_draw_test.rs  main_test.rs  markdown.rs  markdown_test.rs  pager.rs  pager_test.rs  plugin.rs  plugin_test.rs  (+22 more)
src/app/: content_pos.rs  content_pos_test.rs  content_query.rs  content_query_test.rs  diff_nav.rs  diff_nav_test.rs  file_ops.rs  file_ops_test.rs  fold.rs  fold_test.rs  init.rs  init_test.rs  key_handlers.rs  loader.rs  loader_test.rs  mod.rs  mod_test.rs  mouse_handlers.rs  mouse_handlers_test.rs  navigation.rs  navigation_test.rs  pager.rs  pager_test.rs  plugin_ops.rs  plugin_ops_test.rs  refresh.rs  refresh_test.rs  tests.rs  types.rs  types_test.rs  util.rs  util_test.rs  yaml_fold.rs
src/app/key_handlers/: editor.rs  editor_test.rs  mod.rs  mod_test.rs  normal.rs  normal_test.rs  overlay.rs  overlay_test.rs  visual.rs
src/config/: keymap.rs  keymap_test.rs  mod.rs  mod_test.rs  static_keys.rs  static_keys_test.rs  tests.rs  types.rs  types_test.rs  validate.rs  validate_test.rs
src/event_source/: mod.rs  mod_test.rs  mouse.rs  mouse_test.rs  parser.rs  parser_test.rs
src/git/: core.rs  core_test.rs  mod.rs  types.rs  types_test.rs
src/plugin/: install.rs  install_test.rs  manager.rs  manager_test.rs  manifest.rs  manifest_test.rs  mod.rs  mod_test.rs  process.rs  process_test.rs  registry.rs  registry_test.rs  syntax.rs  syntax_test.rs  types.rs  types_test.rs
src/search/: history.rs  history_test.rs  mod.rs  pickers.rs  pickers_test.rs  repo_log.rs  repo_log_test.rs
src/telemetry/: mod.rs  mod_test.rs  sink.rs  sink_test.rs
src/ui/: content.rs  content_test.rs  mod.rs  mod_test.rs  popups.rs  popups_test.rs  statusbar.rs  statusbar_test.rs  tree.rs  tree_test.rs
src/ui/content/: blame.rs  blame_test.rs  content_test.rs  diff.rs  diff_test.rs  draw.rs  draw_test.rs  draw_text.rs  draw_text_test.rs  mod.rs  scrollbar.rs  search.rs  (+4 more)
tests/: config_schema.snapshot  config_tests.rs  e2e_tests.rs  file_tests.rs  git_tests.rs  theme_tests.rs
themes/: catppuccin-latte.toml  catppuccin.toml  default.toml  monokai.toml  pink.toml  solarized-light.toml  solarized.toml  synthwave84.toml  vscode-light.toml
(+47 files in other folders)
