[package]
name = "tree-viewer"
version = "0.4.7"
edition = "2021"
description = "A fast terminal file tree viewer with syntax highlighting, markdown rendering, fuzzy search, and mouse support."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ansromanov/tree-viewer"

[lib]
name = "tree_viewer"
path = "src/lib.rs"

[[bin]]
name = "tv"
path = "src/main.rs"

[profile.release]
strip = true        # drop symbols/debuginfo from the binary
lto = true          # cross-crate link-time optimization
codegen-units = 1   # better optimization at the cost of build time
panic = "abort"     # no unwinding tables; smaller binary

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
ignore = "0.4"
fuzzy-matcher = "0.3"
syntect = "5"
anyhow = "1"
pulldown-cmark = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
notify = "6"
unicode-width = "0.2"
arboard = "3"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
