[workspace]
members = [
    "plugins/mantis-plugin-markdown",
    "plugins/mantis-plugin-iconize",
]
resolver = "2"

[package]
name = "mantis"
version = "0.13.16"
edition = "2021"
description = "A fast terminal file tree viewer with syntax highlighting, fuzzy search, and mouse support."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ansromanov/mantis"

[lib]
name = "mantis"
path = "src/lib.rs"

[[bin]]
name = "mantis"
path = "src/main.rs"

[profile.dev]
# Full debuginfo dominates compile + link time for the test build; line tables
# keep usable backtraces at a fraction of the cost.
debug = "line-tables-only"

[profile.release]
strip = true        # drop symbols/debuginfo from the binary
lto = true          # cross-crate link-time optimization
codegen-units = 1   # better optimization at the cost of build time
panic = "abort"     # no unwinding tables; smaller binary

[dependencies]
ratatui = "0.28"
crossterm = "0.28.1"
libc = "0.2"
ignore = "0.4"
fuzzy-matcher = "0.3"
syntect = "5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
notify = "6"
unicode-width = "0.2"
arboard = "3"
memmap2 = "0.9"
regex = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
