[package]
name = "tv-plugin-git-diff"
version = "0.1.0"
edition = "2021"
description = "Bundled git-diff plugin for tree-viewer (tv). Shows git working-tree diff when opening tracked files."
license = "GPL-3.0-or-later"
repository = "https://github.com/ansromanov/tree-viewer"

[dependencies]
serde_json = "1"
