[package]
name = "tv-plugin-markdown"
version = "0.1.0"
edition = "2021"
description = "Bundled markdown renderer plugin for tree-viewer (tv). Renders .md files to ANSI escape codes."
license = "GPL-3.0-or-later"
repository = "https://github.com/ansromanov/tree-viewer"

[dependencies]
serde_json = "1"
pulldown-cmark = "0.9"
