[package]
name = "yaml"
version = "0.1.0"
edition = "2021"
description = "Bundled YAML language provider plugin for mantis. Provides fold capability via fold_detectors::yaml_fold."
license = "GPL-3.0-or-later"
repository = "https://github.com/ansromanov/mantis"

[dependencies]
mantis = { path = "../.." }
serde_json = "1"
